--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = rootsh
-rootsh_SOURCES = rootsh.c
+rootsh_SOURCES = rootsh.c readconf.c username.c
 if LOGTOSYSLOG
 rootsh_SOURCES += write2syslog.c
 endif
